--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-preset-react": "^6.16.0",
     "bootstrap": "^3.3.7",
     "react": "^15.4.1",
+    "react-bootstrap": "^0.30.7",
     "react-dnd": "^2.1.4",
     "react-dnd-html5-backend": "^2.1.2",
     "react-dom": "^15.4.1",
@@ -38,6 +39,10 @@
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
     "clean-webpack-plugin": "^0.1.14",
+    "css-loader": "^0.26.1",
+    "less": "^2.7.2",
+    "less-loader": "^2.2.3",
+    "style-loader": "^0.13.1",
     "webpack": "^1.14.0",
     "webpack-dev-middleware": "^1.9.0",
     "webpack-hot-middleware": "^2.14.0"
