--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "bootstrap": "^3.3.7",
+    "lodash": "^4.17.4",
     "react": "^15.4.1",
     "react-bootstrap": "^0.30.7",
     "react-dnd": "^2.1.4",
