--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "bootstrap": "^3.3.7",
+    "jquery": "^3.1.1",
+    "jquery-ui": "^1.12.1",
+    "jquery-ui-rotatable": "godswearhats/jquery-ui-rotatable",
     "lodash": "^4.17.4",
     "react": "^15.4.1",
     "react-bootstrap": "^0.30.7",
