--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "bootstrap": "^3.3.7",
+    "file-loader": "^0.9.0",
     "jquery": "^3.1.1",
     "jquery-ui": "^1.12.1",
     "jquery-ui-rotatable": "godswearhats/jquery-ui-rotatable",
@@ -33,7 +34,8 @@
     "react-dom": "^15.4.1",
     "react-redux": "^5.0.1",
     "redux": "^3.6.0",
-    "redux-thunk": "^2.1.0"
+    "redux-thunk": "^2.1.0",
+    "url-loader": "^0.5.7"
   },
   "devDependencies": {
     "babel-core": "^6.21.0",
